# EncodeDecode_Project

./: CMakeLists.txt  CheckUserOneIntInput.cpp  CheckUserOneIntInput.h  CheckUserTwoIntInput.cpp  CheckUserTwoIntInput.h  ColorClass.cpp  ColorClass.h  Makefile  MessgFileClass.cpp  MessgFileClass.h  PpmImgClass.cpp  PpmImgClass.h  README.md  constants.h  proj3.cpp  typescript
